# CoroEval

./: CMakeLists.txt  CoroEval.pro  FindLibZip.cmake  FindOpenMesh.cmake  FindQwt.cmake  FindQwt6.cmake  README.txt  license.txt
src/: CImg.h  Data.cpp  Data.h  Interval.cpp  Interval.h  MPFilter.cpp  MPFilter.h  PlotWidget.cpp  PlotWidget.h  Triangulation.cpp  Triangulation.h  ZipFile.cpp  ZipFile.h  bsplineinterpolation.cpp  bsplineinterpolation.h  coronaryprofile.cpp  coronaryprofile.h  coronaryprofile.ui  coronaryprofile2.cpp  coronaryprofile2.h  coronaryprofile2.ui  evaldialog.cpp  evaldialog.h  evaluationdialog.cpp  evaluationdialog.h  evaluationdialog.ui  imagelabel.cpp  imagelabel.h  imagewidget.cpp  imagewidget.h  imagewidget.ui  loaddialog.cpp  loaddialog.h  loaddialog.ui  main.cpp  mainCoroPlot.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  measurementpoint.cpp  (+29 more)
src/wm3/: Wm3BSplineBasis.cpp  Wm3BSplineBasis.h  Wm3BSplineFit.h  Wm3BandedMatrix.h  Wm3BandedMatrix.inl  Wm3Curve3.h  Wm3Eigen.h  Wm3GMatrix.h  Wm3GVector.h  Wm3Integrate1.h  Wm3Matrix4.cpp  Wm3Memory.cpp  Wm3NoniterativeEigen3x3.cpp  Wm3SingleCurve3.cpp  Wm3Vector4.cpp
wm3/: CMakeLists.txt  Wm3BSplineCurve3.cpp  Wm3BSplineCurve3.h  Wm3BSplineFit.cpp  Wm3BSplineFitBasis.cpp  Wm3BSplineFitBasis.h  Wm3Curve3.cpp  Wm3Eigen.cpp  Wm3GMatrix.inl  Wm3GVector.inl  Wm3Integrate1.cpp  Wm3Line3.h  Wm3Math.cpp  Wm3Matrix2.cpp  Wm3Matrix3.cpp  Wm3NoniterativeEigen3x3.h  Wm3Quaternion.cpp  Wm3Segment3.h  Wm3Segment3.inl  Wm3SingleCurve3.h  Wm3System.cpp  Wm3Vector2.cpp  Wm3Vector3.cpp
