SET(WM3_HDRS
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Vector2.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Vector3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Vector4.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3GVector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3TTuple.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3TStack.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3TSet.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3TList.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3THashTable.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3THashSet.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3TArray.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3System.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3SingleCurve3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Segment3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Quaternion.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Platforms.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Memory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Matrix2.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Matrix3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Matrix4.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3GMatrix.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Math.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Line3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Integrate1.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3FoundationLIB.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Curve3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3BSplineFitBasis.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3BSplineFit.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3BSplineCurve3.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3BSplineBasis.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3BandedMatrix.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Eigen.h
  ${CMAKE_CURRENT_SOURCE_DIR}/Wm3NoniterativeEigen3x3.h
)

SET(WM3_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Vector2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Vector3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Vector4.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3System.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3SingleCurve3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Quaternion.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Memory.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Matrix2.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Matrix3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Matrix4.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Math.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Integrate1.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Curve3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3BSplineFitBasis.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3BSplineFit.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3BSplineCurve3.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3BSplineBasis.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3Eigen.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Wm3NoniterativeEigen3x3.cpp
)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")

add_library(wm3 ${WM3_SRCS})
